[package]
name = "django-auth"
version = "0.1.1"
edition = "2021"
license-file = "LICENSE"
description = "Authenticate or generate Django-managed passwords"
homepage = "https://github.com/mindeng/django-auth"
repository = "https://github.com/mindeng/django-auth"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pbkdf2 = "0.12"
sha2 = "0.10"
base64 = "0.21"
thiserror = "1.0"

[dev-dependencies]
clap = { version = "4.4", features = ["derive"] }

[[example]]
name = "auth"

[package.metadata.playground]
